[gd_scene load_steps=2 format=3 uid="uid://lj3djtbh1o26"]

[ext_resource type="Script" uid="uid://berhgjoqwtn0f" path="res://scripts/killzone.gd" id="1_xlapc"]

[node name="Killzone" type="Area2D"]
script = ExtResource("1_xlapc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="hp_reduction" from="." to="." method="_on_hp_reduction"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
